@@ -1,5 +1,5 @@
 /*
- * $Id: neighbors.h,v 1.11 1996/07/26 19:28:51 wessels Exp $
+ * $Id: neighbors.h,v 1.12 1996/07/27 07:07:44 wessels Exp $
  *
  * AUTHOR: Harvest Derived
  *
@@ -195,6 +195,12 @@ struct neighbor_cf {
     struct neighbor_cf *next;
 };
 
+struct _hierarchyLogData {
+	hier_code code;
+	char *host;
+	int timeout;
+};
+
 extern edge *getFirstEdge _PARAMS((void));
 extern edge *getFirstUpParent _PARAMS((request_t *));
 extern edge *getNextEdge _PARAMS((edge *));
@@ -203,12 +209,11 @@ extern int neighborsUdpPing _PARAMS((protodispatch_data *));
 extern void neighbors_cf_domain _PARAMS((char *, char *));
 extern void neighbors_cf_acl _PARAMS((char *, char *));
 extern neighbors *neighbors_create _PARAMS(());
-extern void hierarchy_log_append _PARAMS((StoreEntry *, hier_code, int, char *));
+extern void hierarchyNote _PARAMS((request_t *, hier_code, int, char *));
 extern void neighborsUdpAck _PARAMS((int, char *, icp_common_t *, struct sockaddr_in *, StoreEntry *, char *, int));
 extern void neighbors_cf_add _PARAMS((char *, char *, int, int, int, int));
 extern void neighbors_init _PARAMS((void));
 extern void neighbors_open _PARAMS((int));
-extern void neighbors_rotate_log _PARAMS((void));
 extern void neighborsDestroy _PARAMS((void));
 extern edge *neighborFindByName _PARAMS((char *));
 
