@@ -1,6 +1,6 @@
 # @configure_input@
 #
-# $Id: squid.conf.pre.in,v 1.28 1996/07/26 17:18:25 wessels Exp $
+# $Id: squid.conf.pre.in,v 1.29 1996/07/27 07:07:45 wessels Exp $
 #
 
 #  TAG: http_port
@@ -279,12 +279,6 @@
 #  TAG: cache_log 
 #	Cache logging file.  Set logging levels with "debug_options" below.
 #cache_log @DEFAULT_CACHE_LOG@
-
-#  TAG: cache_hierarchy_log 
-#	Hierachical caching access logfile.  It shows which parent,
-#	neighbor, or source host a request is satisfied from.
-#	To disable, enter "none".
-#cache_hierarchy_log @DEFAULT_HIERARCHY_LOG@
 
 #  TAG:	cache_store_log
 #	Logs the activities of the storage manager.  Shows which
